Header section done

--- a/index.html
+++ b/index.html
@@ -1,36 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <title>Best Beers</title>
 </head>
+
 <body>
 
     <nav>
-<div id="HeaderDiv">
-<h1>Best Beers</h1>
-ikon
-</div>
+        <div id="HeaderDiv">
+            <h1>Best Beers</h1>
+            <div>
+                <span class="material-symbols-outlined">
+                    menu
+                </span>
+            </div>
+        </div>
     </nav>
 
 
     <main>
-<div id="ContainerDiv">
-    <div id="BeerCard">
-        <h1>Mango Bay</h1>
-        <hr>
-        <p class="BeerName">Mad Scientist Beer</p>
-        <p class="BeerType">Pale Ale - American</p>
-        <div class="CardNumber">1</div>
-<div class="BeerDetails">detalis IKON</div>
-    </div>
-    
-</div>
+        <div id="ContainerDiv">
+            <div id="BeerCard">
+                <h1>Mango Bay</h1>
+                <hr>
+                <p class="BeerName">Mad Scientist Beer</p>
+                <p class="BeerType">Pale Ale - American</p>
+                <div class="CardNumber">1</div>
+                <div class="BeerDetails">
+                    <span class="material-symbols-outlined">
+                        arrow_forward
+                    </span>
+                </div>
+            </div>
+
+        </div>
 
     </main>
 
 </body>
+
 </html>
