--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <nav>
         <div id="HeaderDiv">
-            <h1>Best Beers</h1>
+            <h2>Best Beers</h2>
             <div>
                 <span class="material-symbols-outlined">
                     menu
@@ -36,20 +36,82 @@
 
     <main>
         <div id="ContainerDiv">
-            <div id="BeerCard">
-                <h1>Mango Bay</h1>
-                <hr>
-                <p class="BeerName">Mad Scientist Beer</p>
-                <p class="BeerType">Pale Ale - American</p>
-                <div class="CardNumber">1</div>
-                <div class="BeerDetails">
-                    <span class="material-symbols-outlined">
-                        arrow_forward
-                    </span>
+
+            <div class="RowDiv">
+                <div id="BeerCard">
+                    <h1>Mango Bay</h1>
+                    <hr>
+                    <p class="BeerName">Mad Scientist Beer</p>
+                    <p class="BeerType">Pale Ale - American</p>
+                    <div class="CardNumber">
+                        1
+                    </div>
+                    <div class="BeerDetails">
+                        details
+                        <span class="material-symbols-outlined">
+                            arrow_forward
+                        </span>
+                    </div>
+                </div>
+
+                <div id="BeerCard">
+                    <h1>Távoli Galaxis</h1>
+                    <hr>
+                    <p class="BeerName">Rothbeer Brewery</p>
+                    <p class="BeerType">IPA - American</p>
+                    <div class="CardNumber">
+                        2
+                    </div>
+                    <div class="BeerDetails">
+                        details
+                        <span class="material-symbols-outlined">
+                            arrow_forward
+                        </span>
+                    </div>
                 </div>
             </div>
 
+            <div class="RowDiv">
+                <div id="BeerCard">
+                    <h1>Flying Rabbit AIPA</h1>
+                    <hr>
+                    <p class="BeerName">MONYO Brewing Co.</p>
+                    <p class="BeerType">IPA - American</p>
+                    <div class="CardNumber">
+                        3
+                    </div>
+                    <div class="BeerDetails">
+                        details
+                        <span class="material-symbols-outlined">
+                            arrow_forward
+                        </span>
+                    </div>
+                </div>
+
+                <div id="BeerCard">
+                    <h1>Liquid Cocaine</h1>
+                    <hr>
+                    <p class="BeerName">Mad Scientist Beer</p>
+                    <p class="BeerType">IPA - Imperial</p>
+                    <div class="CardNumber">
+                        4
+                    </div>
+                    <div class="BeerDetails">
+                        details
+                        <span class="material-symbols-outlined">
+                            arrow_forward
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+
+
         </div>
+
+
+
+
 
     </main>
 
